--- a/offline.html
+++ b/offline.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Lonely Globe Advisor</title>
+  <link rel="manifest" href="manifest.json"
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/offline.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
